# pac-mini

./: Cargo.toml  README.md  memory.x
.vcode/: settings.json
src/: hal.rs  handler.rs  initial.rs  main.rs  random.rs  state.rs  time.rs  timer.rs
src/learn/: interupt.rs  pac.rs  standard.rs
