[package]
name = "microbit_learn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "microbit_learn"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtt-target = "0.6.1"
nrf52833-pac = "0.12.2"
nrf52833-hal = "0.18.0"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
fugit = "0.3.7"
